--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IntelligentCloudVideo">
-        <activity android:name=".Activity.EZRealPlayActivity"></activity>
+        <activity android:name=".Activity.EZRealPlayActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".Activity.MainActivity"
             android:screenOrientation="portrait" />
