新增对讲功能；新增设置界面；新增修改设备名称功能。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IntelligentCloudVideo">
-        <activity android:name=".Activity.EZRealPlayActivity"
+        <activity android:name=".Activity.ModifyDeviceNameActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activity.EZDeviceSettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.EZRealPlayActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activity.MainActivity"
             android:screenOrientation="portrait" />
