--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IntelligentCloudVideo">
-        <activity android:name=".Activity.ModifyDeviceNameActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Activity.SeriesNumSearchActivity"></activity>
+        <activity
+            android:name=".Activity.ModifyDeviceNameActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activity.EZDeviceSettingActivity"
             android:screenOrientation="portrait" />
